# crack-tracer

./: .gitignore  CMakeLists.txt  README.md
inc/: camera.hpp  colors.hpp  comptime.hpp  globals.h  globals.hpp  materials.hpp  math.h  math.hpp  rand.hpp  render.hpp  sphere.h  sphere.hpp  types.h  types.hpp  utils.hpp  vec.hpp
src/: CMakeLists.txt  camera.cpp  camera.h  comptime.cpp  comptime.h  entry.cpp  globals.h  main.cpp  materials.cpp  materials.h  math.cpp  math.h  rand.cpp  rand.h  render.cpp  render.h  sphere.cpp  sphere.h  utils.cpp
tests/: entry.cpp
